src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Recurring_Revenue__c</fullName>
        <label>Recurring Revenue</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.One_Time_Purchase__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.External_Product_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollout_Type__c</fullName>
        <label>Rollout Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pilot Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Channel</label>
        <referenceTo>Sales_Channel__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Year_Run_Rate__c</fullName>
        <label>Second Year Run Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <description>How are you planning on pursuing this opportunity in order to win?</description>
        <inlineHelpText>How are you planning on pursuing this opportunity in order to win?</inlineHelpText>
        <label>Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Stage__c</fullName>
        <description>If Stage is set to RFP Stage, Sub-Stage is required.</description>
        <inlineHelpText>If Stage is set to RFP Stage, Sub-Stage is required.</inlineHelpText>
        <label>Sub-Stage</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Proactive Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged by SAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal planning session completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Share Rally Roadmap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Approved by Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal under review by Client</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Success_Metrics__c</fullName>
        <label>Success Metrics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Covered_Employees__c</fullName>
        <label>Total Covered Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Covered_Members__c</fullName>
        <label>Total Covered Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Implementation_Fees__c</fullName>
        <label>Total Implementation Fees</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Opportunity_Product_Type__c</field>
            <operation>equals</operation>
            <value>Implementation Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <inlineHelpText>Total value of the contract based on the information you put in the Product Package. If this number is not correct, please go back to the Product Package and revise or contact Alison Martha.</inlineHelpText>
        <label>Total Revenue</label>
        <summarizedField>Product_Schedule__c.Amount__c</summarizedField>
        <summaryForeignKey>Product_Schedule__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X2017_Revenue__c</fullName>
        <description>Use this field to enter in a value for the amount you anticipate to be collected in 2017.</description>
        <inlineHelpText>Use this field to enter in a value for the amount you anticipate to be collected in 2017.</inlineHelpText>
        <label>2017 Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Amount__c</fullName>
        <label>Year 1 Amount</label>
        <summarizedField>Product_Schedule__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Product_Schedule__c.Year__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Product_Schedule__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost,Delayed</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Market_Segment__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed/Retained,Closed Won,Closed Lost,Closed - Other</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Optum</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Optum__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Optum</label>
        <sharedTo>
            <role>Implementation_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Choice</fullName>
        <active>true</active>
        <businessProcess>Rally</businessProcess>
        <label>Choice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Choice_Approved</fullName>
        <active>false</active>
        <businessProcess>Rally</businessProcess>
        <description>Approved Choice Opportunities</description>
        <label>Choice Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Connect</fullName>
        <active>true</active>
        <businessProcess>Rally</businessProcess>
        <label>Connect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Connect_Approved</fullName>
        <active>false</active>
        <businessProcess>Rally</businessProcess>
        <description>Approved Connect Opportunities</description>
        <label>Connect Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Consultation</fullName>
        <active>true</active>
        <businessProcess>Rally</businessProcess>
        <label>Consultation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Digital_Health_Plan</fullName>
        <active>true</active>
        <businessProcess>Rally</businessProcess>
        <label>Digital Health Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engage</fullName>
        <active>true</active>
        <businessProcess>Rally</businessProcess>
        <label>Engage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engage_Approved</fullName>
        <active>false</active>
        <businessProcess>Rally</businessProcess>
        <description>Approved Engage Opportunities</description>
        <label>Engage Approved</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal</fullName>
        <active>true</active>
        <businessProcess>Renewal</businessProcess>
        <label>Renewal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Closed_Other_requires_notes</fullName>
        <active>true</active>
        <description>Opportunities with in stage &quot;Closed - Other&quot; need an explanation as to why.</description>
        <errorConditionFormula>AND(
				
				 ISPICKVAL(StageName, &apos;Closed - Other&apos;),
				 ISBLANK(Closed_Other_Reason__c))</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>Opportunities with in stage &quot;Closed - Other&quot; need an explanation as to why.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hot_Prospect_Lock_Down</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &apos;00eE0000000VOcx&apos;,
Hot_Prospect__c = true, 
ISBLANK(Next_Steps__c))</errorConditionFormula>
        <errorDisplayField>Next_Steps__c</errorDisplayField>
        <errorMessage>Hot Prospect deals require next steps.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Down_Optum_Deals</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
				AND(
				NOT($Permission.Edit_Optum_Opps),
				NOT(ISBLANK(External_Partner_ID__c)),
				$Profile.Id &lt;&gt; &apos;00eE0000000VOcx&apos;), true,false)</errorConditionFormula>
        <errorMessage>You are not allowed to edit Optum deals.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RFP_Stage_Requires_Sub_Stage</fullName>
        <active>true</active>
        <description>If RFP Stage is selected, Sub-Stage is required.</description>
        <errorConditionFormula>AND(
ISPICKVAL(StageName,&quot;RFP Stage&quot;),
ISPICKVAL(Sub_Stage__c , &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Sub_Stage__c</errorDisplayField>
        <errorMessage>Sub-stage is required when Stage is set to &quot;RFP Stage&quot;. Please select a sub-stage.</errorMessage>
    </validationRules>
</CustomObject>